--- a/templates/building.template
+++ b/templates/building.template
@@ -1,2 +1,3 @@
-<a-entity geometry="primitive: box; depth: 20; width: 20; height: 70"
-          material building-texture></a-entity>
+<a-entity geometry="primitive: box"
+          geometry-merge="city" material="metalness: 0.2; roughness: 0.8"
+          building-texture building-size="50 100 50"></a-entity>
